解决不能定位的问题

--- a/Application/Phone/View/Shop/shopDetail.html
+++ b/Application/Phone/View/Shop/shopDetail.html
@@ -48,7 +48,7 @@
             <div class="weui_cells weui_cells_access">
                 <a class="weui_cell" href="javascript:;" id="dignweiBtn">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <p>点击定位，可以让顾客通过地图找到店铺(<span id="latlngInput"></span>)</p>
+                        <p>定位让顾客通过地图找到店铺<span id="latlngInput"></span></p>
                     </div>
                     <div class="weui_cell_ft"><if condition="$info['lat'] neq 0">重新定位<else/>定位</if></div>
                 </a>
