--- a/Application/Phone/View/Shop/activityEdit.html
+++ b/Application/Phone/View/Shop/activityEdit.html
@@ -132,7 +132,7 @@
             <div class="content-block">
                 <p><a href="#" class="close-popup" id="closePublish">返回编辑页</a></p>
                 <empty name="goodslist">
-                        <span class="tip">您还没有上传商品，点击<a href="{:UC('Shop/goodsEdit')">上传商品</a></span>
+                        <span class="tip">您还没有上传商品，点击<a href="{:UC('Shop/goodsEdit')}">上传商品</a></span>
                 <else/>
 
                     <form id="selectGoods">
