--- a/Application/Phone/View/Shop/activityEdit.html
+++ b/Application/Phone/View/Shop/activityEdit.html
@@ -12,6 +12,16 @@
     <div class="page page-current" id="activityEdit">
         <div class="content">
             <form action="{:UC('Shop/activityEditCommit')}" id="mainform">
+
+                <div class="weui_cells">
+                    <a class="weui_cell open-goodsList" href="#" id="showActivityGoodsBtn">
+                        <div class="weui_cell_bd weui_cell_primary">
+                            <p>编辑活动商品</p>
+                        </div>
+                        <div class="weui_cell_ft">选择了 <span id="totalGoods">0</span> 件商品</div>
+                    </a>
+                </div>
+
                 <div class="weui_cells_title">活动标题</div>
                 <div class="weui_cells weui_cells_form">
                     <div class="weui_cell">
@@ -56,15 +66,6 @@
                     </div>
                 </div>
 
-
-                <div class="weui_cells">
-                    <a class="weui_cell open-goodsList" href="#" id="showActivityGoodsBtn">
-                        <div class="weui_cell_bd weui_cell_primary">
-                            <p>编辑活动商品</p>
-                        </div>
-                        <div class="weui_cell_ft">选择了 <span id="totalGoods">0</span> 件商品</div>
-                    </a>
-                </div>
 
                 <div class="weui_cells_title">活动描述</div>
                 <div class="weui_cells weui_cells_form">
@@ -132,7 +133,7 @@
             <div class="content-block">
                 <p><a href="#" class="close-popup" id="closePublish">返回编辑页</a></p>
                 <empty name="goodslist">
-                        <span class="tip">您还没有上传商品，点击<a href="{:UC('Shop/goodsEdit')}">上传商品</a></span>
+                        <span class="tip">您还没有上传商品，返回<a href="{:UC('Shop/index')}">首页</a>后进入“商品”进行管理吧</span>
                 <else/>
 
                     <form id="selectGoods">
