--- a/Application/Phone/View/Shop/activityEdit.html
+++ b/Application/Phone/View/Shop/activityEdit.html
@@ -13,14 +13,6 @@
         <div class="content">
             <form action="{:UC('Shop/activityEditCommit')}" id="mainform">
 
-                <div class="weui_cells">
-                    <a class="weui_cell open-goodsList" href="#" id="showActivityGoodsBtn">
-                        <div class="weui_cell_bd weui_cell_primary">
-                            <p>编辑活动商品</p>
-                        </div>
-                        <div class="weui_cell_ft">选择了 <span id="totalGoods">0</span> 件商品</div>
-                    </a>
-                </div>
 
                 <div class="weui_cells_title">活动标题</div>
                 <div class="weui_cells weui_cells_form">
@@ -32,6 +24,16 @@
                                    placeholder="活动标题要吸引人">
                         </div>
                     </div>
+                </div>
+
+
+                <div class="weui_cells">
+                    <a class="weui_cell open-goodsList" href="#" id="showActivityGoodsBtn">
+                        <div class="weui_cell_bd weui_cell_primary">
+                            <p>点击编辑活动商品</p>
+                        </div>
+                        <div class="weui_cell_ft">选择了 <span id="totalGoods">0</span> 件商品</div>
+                    </a>
                 </div>
 
                 <div class="weui_cells_title">活动开始时间</div>
