看到不是自己的商品 BUG

--- a/Application/Phone/View/Shop/openShop.html
+++ b/Application/Phone/View/Shop/openShop.html
@@ -15,7 +15,7 @@
                 <h1 class="page-title">
                     店多多
                 </h1>
-                <p class="page-desc">让更多本地人知道您</p>
+                <p class="page-desc">让您在本地更知名！</p>
             </div>
 
             <form method="post" action="{:UC('Shop/openShopCommit')}" id="form">
