测试缩略图

--- a/Application/Phone/View/Shop/activityEdit.html
+++ b/Application/Phone/View/Shop/activityEdit.html
@@ -95,7 +95,7 @@
                     </div>
                 </div>
 
-                <div class="weui_cells_title">上传活动封面</div>
+                <div class="weui_cells_title">活动封面（建议尺寸为350px*200px）</div>
                 <div class="weui_cells weui_cells_form">
                     <div class="weui_cell">
                         <div class="weui_cell_bd weui_cell_primary">
