--- a/Application/Phone/View/Shop/goodsEdit.html
+++ b/Application/Phone/View/Shop/goodsEdit.html
@@ -42,12 +42,11 @@
                     <div class="weui_cell_bd weui_cell_primary">
                         <textarea class="weui_textarea" placeholder="请输入商品描述" rows="3"
                                   name="intro" required maxlength="200">{$goodsDetail['intro']}</textarea>
-                        <div class="weui_textarea_counter">限200字</div>
                     </div>
                 </div>
             </div>
 
-            <div class="weui_cells_title">上传照片</div>
+            <div class="weui_cells_title">商品照片（建议尺寸为150像素*200像素）</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
