测试上传图片

--- a/Application/Phone/View/Shop/shopDetail.html
+++ b/Application/Phone/View/Shop/shopDetail.html
@@ -68,7 +68,7 @@
             </div>
 
 
-            <div class="weui_cells_title">上传店铺照片</div>
+            <div class="weui_cells_title">店铺照片（建议尺寸为350px*200px</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
