--- a/Application/Phone/View/Activity/activityInfo.html
+++ b/Application/Phone/View/Activity/activityInfo.html
@@ -47,6 +47,16 @@
                         </div>
                         <div class="address-box">
                             地址：{$info['address']}
+                            <if condition="$info['lat'] and $info['lng']">
+                                <a href="javascript:;"
+                                   class="pull-right lookmap"
+                                   data-lat="{$info['lat']}"
+                                   data-lng="{$info['lng']}"
+                                   data-name="{$info['name']}"
+                                   data-address="{$info['address']}">
+                                    查看地图
+                                </a>
+                            </if>
                         </div>
                     </div>
                     <div class="activity-goodslist-box">
