延时加载测试

--- a/Application/Phone/View/template/shop_main.html
+++ b/Application/Phone/View/template/shop_main.html
@@ -27,6 +27,8 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script src="__PUBLIC__/js/validator.min.js"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script src="__PUBLIC__/Public/js/lazyload.min.js"></script>
+
 <script>
     domain = "{$domain}";
 </script>
@@ -38,6 +40,7 @@
 </if>
 
 <script type='text/javascript' src="__PUBLIC__/js/main.js?v={$rannum}" charset='utf-8'></script>
+
 <block name="script"></block>
 </body>
 </html>
