--- a/Application/Phone/View/Miaoji/showcase.html
+++ b/Application/Phone/View/Miaoji/showcase.html
@@ -11,7 +11,7 @@
                 <a class="yspanel margin-top30" href="{:UC('Miaoji/showcaseDispatch',array('id'=>$info['id']))}">
                     <div class="yspanel-image-box">
                         <div class="yspanel-image-textbox">- <span class="text">{$info['name']}</span> -</div>
-                        <img class="yspanel-image-image" src="{$info['imglist']}">
+                        <img class="lazy yspanel-image-image" data-original="{$info['imglist']}">
                     </div>
                     <div class="yspanel-content-box2">
                         {$info['intro']}
