添加图片延迟加载

--- a/Application/Phone/View/Activity/activityInfo.html
+++ b/Application/Phone/View/Activity/activityInfo.html
@@ -8,8 +8,8 @@
             </div>
             <div class="yspanel">
                 <div class="banner-header-imgbox">
-                    <img src="{$info['piclist']}"
-                         class="showimglist"
+                    <img data-original="{$info['piclist']}"
+                         class="lazy showimglist"
                          data-imglist="<?php echo implode(',',$info['piclist']);?>"
                          alt="" style="width: 100%">
 
