--- a/Application/Phone/View/template/shop_main.html
+++ b/Application/Phone/View/template/shop_main.html
@@ -27,7 +27,7 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script src="__PUBLIC__/js/validator.min.js"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-<script src="__PUBLIC__/Public/js/lazyload.min.js"></script>
+<script src="__PUBLIC__/js/lazyload.min.js"></script>
 
 <script>
     domain = "{$domain}";
