修改微信菜单

--- a/Application/Phone/View/Miaoji/showcaseDetail.html
+++ b/Application/Phone/View/Miaoji/showcaseDetail.html
@@ -56,7 +56,7 @@
             </volist>
 
             <p class="gray-text1 text-center margin-top30">
-                你中意的店铺不在这里？那就<a href="{:UC('Miaoji/editSuggest',array('cid',$_GET['id']))}" id="telmebtn">告诉我们</a>吧。
+                您的店铺不在这里？那就<a href="{:UC('Shop/openShop')}" id="telmebtn">免费开店</a>吧。
             </p>
         </div>
     </div>
