电话输入BUG，分享功能

--- a/Application/Phone/View/Shop/openShop.html
+++ b/Application/Phone/View/Shop/openShop.html
@@ -55,7 +55,7 @@
                         <div class="weui_cell_hd"><label class="weui_label">电话</label></div>
                         <div class="weui_cell_bd weui_cell_primary">
                             <input class="weui_input"
-                                   type="number"
+                                   type="text"
                                    name="phone"
                                    required
                                    placeholder="请填写座机或手机号码">
