--- a/Application/Phone/View/Shop/shopDetail.html
+++ b/Application/Phone/View/Shop/shopDetail.html
@@ -28,9 +28,9 @@
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="number" placeholder="请输入您的联系电话"
+                        <input class="weui_input" placeholder="请输入您的联系电话"
                                name="phone" value="{$info['phone']}"
-                               required pattern="[0-9]*">
+                               required>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
             </div>
 
 
-            <div class="weui_cells_title">店铺照片（建议尺寸为350px*200px</div>
+            <div class="weui_cells_title">店铺照片（建议上传横图片）</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
