可发多张图片

--- a/Application/Phone/View/Activity/activityInfo.html
+++ b/Application/Phone/View/Activity/activityInfo.html
@@ -8,7 +8,7 @@
             </div>
             <div class="yspanel">
                 <div class="banner-header-imgbox">
-                    <img data-original="{$info['piclist']}"
+                    <img data-original="{$info['piclist'][0]}"
                          class="lazy showimglist"
                          data-imglist="<?php echo implode(',',$info['piclist']);?>"
                          alt="" style="width: 100%">
