分享文案修改

--- a/Application/Phone/View/Miaoji/detail.html
+++ b/Application/Phone/View/Miaoji/detail.html
@@ -86,7 +86,7 @@
             </div>
 
             <p class="gray-text1 text-center small-text margin-top30">
-                如果这店铺的内容有遗漏或者错误，请<a href="#" id="telmebtn">告诉我们</a>吧
+                如果你也想上传您的店铺，那就点击<a href="{:UC('Shop/openShop')}">立即开店</a>吧
             </p>
         </div>
 
