新版活动页面

--- a/Application/Phone/View/Activity/hotActivityGoodsInfo.html
+++ b/Application/Phone/View/Activity/hotActivityGoodsInfo.html
@@ -35,6 +35,10 @@
 
                         </div>
 
+                        <div class="activity-descBox">
+                            12313123123123123132123132132
+                        </div>
+
                         <div class="row activity-btngroup">
                             <div class="col-50">
                                 <a class="activity-btn weui_btn_primary" href="tel:{$info['phone']}"><i class="iconfont">&#xe606;</i>电话</a>
@@ -69,24 +73,7 @@
                             </if>
                         </div>
                     </div>
-                    <div class="activity-goodslist-box">
-                        <h3 class="green-text">活动特惠商品</h3>
-                        <empty name="goodsList">
-                            <div class="text-center margin-top30 gray-text">没有活动商品</div>
-                            <else/>
-                            <volist name="goodsList" id="goodsinfo">
-                                <div class="activity-goods-box flex">
-                                    <img class="activity-goods-img" src="{$goodsinfo['imgurl']}" />
-                                    <div class="activity-goods-infobox flex-1">
-                                        <h3>{$goodsinfo['name']}</h3>
-                                        <div class="price">价格：<span class="price-value">{$goodsinfo['price']}</span></div>
-                                        <div class="gray-text text-line3 intro">{$goodsinfo['intro']}</div>
-                                    </div>
-                                </div>
-                            </volist>
-                        </empty>
 
-                    </div>
 
                 </div>
 
