--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -31,6 +31,8 @@ body{background: #eee;font-size: 14px;}
 .orange-text{color: orange;}
 .green-text{color: #0BB20C;}
 .gray-text{color: #cccccc;}
+.red-text{color: red;}
+.black-text{color: #333333;}
 
 .iconfont{font-family:"iconfont";font-style:normal;}
 @font-face {
@@ -157,15 +159,29 @@ a.btnitem{display: block;}
 .activity-intro{margin-top: 15px;color: #666666;padding: 10px 0;}
 .activity-goodslist-box{margin-top: 15px;}
 .activity-goods-box{border-bottom: 1px solid #dddddd;padding: 10px 0;}
+a.activity-goods-box{color: #333333;}
 .activity-goods-img{width: 120px;height:150px;margin-right: 10px;}
 .activity-goods-infobox .price{background: #eee;padding: 10px;margin-top: 5px;}
 .activity-goods-infobox .price .price-value{color: #990073;}
 .activity-goods-infobox .intro{margin-top: 5px;}
 .activity-box .address-box{background: #eee;padding: 10px;}
 
+.activity-descBox{padding: 20px 10px;}
+
 .shopCateBox{padding: 0 10px;}
 .shopCateBox:after{clear: both;}
 .shopCateBox .cateLink{display: inline-block;width: 46%;text-align: center;padding: 15px 10px;margin: 5px;background: #fff;}
+
+
+.hot-activity-box{padding-bottom: 100px;}
+.activity-banner img{width: 100%;}
+.hot-item{background: #fff;display: block; margin-top: 15px;}
+.hot-item-img{width: 100%;}
+.hot-item-text{text-align: center;font-size: 16px;}
+.activity-intro{background: #fff;padding: 10px;}
+
+.activity-goods-btn{background: orange;padding: 10px;text-align: center;color: #fff;}
+.activity-shopname{}
 
 .article .hd{padding: 2em 0;}
 .article .page_title {
