--- a/Application/Phone/View/Miaoji/detail.html
+++ b/Application/Phone/View/Miaoji/detail.html
@@ -76,7 +76,7 @@
 
 
             <p class="gray-text1 text-center small-text margin-top30">
-                如果你也想上传您的店铺，那就点击<a href="{:UC('Shop/openShop')}">立即开店</a>吧
+                如果你也想上传您的店铺，那就点击<a href="{:UC('Shop/openShop')}" external>立即开店</a>吧
             </p>
         </div>
 
