--- a/Application/Phone/View/Activity/hotActivityGoodsList.html
+++ b/Application/Phone/View/Activity/hotActivityGoodsList.html
@@ -1,7 +1,7 @@
 <extend name="template/temp" />
 <block name="content">
     <div class="page" id="hotActivityGoodsList">
-        <div class="content native-scroll pull-to-refresh-content">
+        <div class="content native-scroll pull-to-refresh-content infinite-scroll">
             <div class="pull-to-refresh-layer">
                 <div class="preloader"></div>
                 <div class="pull-to-refresh-arrow"></div>
@@ -13,29 +13,58 @@
                     <div class="text-center margin-top30 gray-text">这个板块目前还没有商品哦，赶紧上架抢在最前面！</div>
                     <else/>
                     <volist name="list" id="info">
-                        <div class="activity-goods-box flex" style="padding: 10px;">
-                            <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}"><img class="activity-goods-img" src="{$info['imgUrl']}" /></a>
-                            <div class="activity-goods-infobox flex-1">
-                                <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']) )}" class="black-text"><h3 class="text-line2 new-activity-title-box">{$info['name']}</h3></a>
-                                <div class="price" style="margin-top: -5px;">
-                                    优惠价格：<span class="price-value">{$info['price']}</span>
+                        <if condition="$info['imgUrl']">
+                            <div class="activity-goods-box flex glistImg" style="padding: 10px;">
+                                <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}" class="lk">
+                                    <img class="activity-goods-img im" src="{$info['imgUrl']}" />
+                                </a>
+                                <div class="activity-goods-infobox flex-1">
+                                    <a href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']) )}" class="black-text lk">
+                                        <h3 class="text-line2 new-activity-title-box nn">{$info['name']}</h3>
+                                    </a>
+                                    <div class="price" style="margin-top: -5px;">
+                                        特价：<span class="price-value pp">{$info['price']}</span>
+                                        <span class="price-value remove-text op">{$info['original_price']}</span>
+                                    </div>
+                                    <div class="activity-goods-btns">
+                                        <div class="activity-goods-btn">
+                                            <a class="activity-btn like likebtn lb" href="javascript:;" data-id="{$info['id']}">
+                                                <i class="iconfont">&#xe608;</i>喜欢(<span>{$info['likecount']}</span>)
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="activity-shopname gray-text2">来自：<span class="red-text sn">{$info['shopName']}</span></div>
                                 </div>
-                                <div class="activity-goods-btns">
-                                    <div class="activity-goods-btn">
-                                        <a class="activity-btn like likebtn" href="javascript:;" data-id="{$info['id']}">
+                            </div>
+                            <else/>
+                            <div class="activity-goods-box-nopic glist">
+                                <a class="text-line2 goods-title lk nn" href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}?dd=1">
+                                    {$info['name']}
+                                </a>
+                                <div class="activity-goods-infobox flex">
+                                    <a class="activity-goods-contentBox flex-1 lk" href="{:UC('Activity/hotActivityGoodsInfo',array('id'=>$info['id']))}">
+                                        <p class="activity-goods-price">
+                                            特价：<span class="price-value red-text pp">{$info['price']}</span>
+                                            <span class="price-value remove-text op">{$info['original_price']}</span>
+                                        </p>
+                                        <div class="activity-shopname gray-text">来自：<span class="orange-text sn">{$info['shopName']}</span></div>
+                                    </a>
+                                    <div class="like-box">
+                                        <div class="activity-btn like likebtn lb" data-id="{$info['id']}">
                                             <i class="iconfont">&#xe608;</i>喜欢(<span>{$info['likecount']}</span>)
-                                        </a>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="activity-shopname gray-text2">来自：<span class="red-text">{$info['shopName']}</span></div>
                             </div>
-                        </div>
+                        </if>
                     </volist>
                 </empty>
 
             </div>
 
-
+            <div class="infinite-scroll-preloader">
+                <div class="preloader"></div>
+            </div>
 
             <p class="gray-text1 text-center small-text margin-top30">
                 如果您的店铺也想参与店铺，就点击<a href="{:UC('Shop/index')}" external>立即开店</a>吧。
