--- a/Application/Phone/View/Activity/couponList.html
+++ b/Application/Phone/View/Activity/couponList.html
@@ -8,7 +8,7 @@
             </div>
             <div class="hot-activity-box">
                 <div class="activity-banner">
-                    <img src="__PUBLIC__/images/banner.png">
+                    <img src="__PUBLIC__/images/asdasd441545745722.jpg">
                 </div>
 
                 <div class="activity-intro">
