--- a/Application/Phone/View/Activity/couponList.html
+++ b/Application/Phone/View/Activity/couponList.html
@@ -12,8 +12,7 @@
                 </div>
 
                 <div class="activity-intro">
-                    各商家劲爆优惠券出炉啦，五一优惠券大放送，赶紧叫上亲朋好友，拿起手机开抢吧。<br>
-                    点击<a href="#">店多多</a>，有更多惊喜。
+                    各商家劲爆优惠券出炉啦，五一优惠券大放送，赶紧叫上亲朋好友，拿起手机开抢吧。
                 </div>
 
                 <div class="activity-content row" style="margin-top: 15px;padding: 0 5px;">
