后台加入新增店铺

--- a/Application/Phone/View/Admin/shopList.html
+++ b/Application/Phone/View/Admin/shopList.html
@@ -9,7 +9,7 @@
 </block>
 
 <block name="content">
-    <div class="page page-current" id="activity">
+    <div class="page page-current" id="AdminShopList">
         <div class="content native-scroll pull-to-refresh-content">
             <div class="pull-to-refresh-layer">
                 <div class="preloader"></div>
@@ -35,6 +35,8 @@
 
         </div>
 
-        <a href="javascript:;" class="extra_button" id="showActionBtn"><i class="iconfont text">&#xe601;</i></a>
+        <a href="{:UC('Admin/shopAdd')}" class="extra_button" data-no-cache="true" id="showActionBtn">
+            <i class="iconfont text">&#xe601;</i>
+        </a>
     </div>
 </block>
